Fixed extra margin and padding in App

--- a/jam-desk/src/App.css
+++ b/jam-desk/src/App.css
@@ -1,7 +1,14 @@
+body {
+
+    margin: 0;
+    padding: 0;
+
+}
+
 .App {
 
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 
     background-color: black;
     color: white;
