--- a/jam-desk/src/pages/HomePage/HomePage.css
+++ b/jam-desk/src/pages/HomePage/HomePage.css
@@ -1,15 +1,17 @@
 .HomePage {
 
-    width: 100vw;
-    height: 100vh;
+    border: 2px solid red;
+
+    width: 100%;
+    height: 100%;
 
 }
 
 .page {
 
     border: 2px solid green;
-    
-    width: 100vw;
+
+    width: 100%;
     height: 100%;
 
     display: flex;
